<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorWhite"
    tools:context="com.ashwinkanchana.cansis.activities.RegistrationActivity">


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans"
        android:text="@string/sign_up_welcome_textview"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_textview"
        android:fontFamily="@font/sans"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorGrey3"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        style="@android:style/Widget.Material.TextView.SpinnerItem"
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        android:entries="@array/spinner_array" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:inputType="phone"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:hint="@string/password"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_default"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:fontFamily="@font/sans_bold"
        android:textColor="@color/colorWhite"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


</LinearLayout>