<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/feedback_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sans_bold"
        android:textColor="@color/darkText"
        android:drawableStart="@drawable/feedback"
        android:drawablePadding="8dp"
        android:text="@string/feedback_title"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/sans_medium"
        android:textColor="@color/noticeTextColor"
        android:layout_marginStart="32dp"
        android:text="@string/feedback_message"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating"
        android:theme="@style/RatingBar"
        android:layout_below="@id/message"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:stepSize="1"
        android:isIndicator="false" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_edit_text_layout"
        android:layout_below="@id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        app:boxBackgroundColor="@color/colorBlue_translucent2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:maxLength="600"
            />



    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/info_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_edit_text_layout"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/sans_medium"
        android:textColor="@color/noticeTextColor"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/feedback_anonymous"
        android:textSize="12sp"/>


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_feedback"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_below="@id/info_feedback"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:lottie_fileName="check_animation.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_speed="0.6"
        android:visibility="gone"/>

</RelativeLayout>